# crucible

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  team.rs
core/src/combat/: action.rs  actor.rs  conditions.rs  log.rs  mod.rs
core/src/dice/: mod.rs  pool.rs  roll.rs
core/src/dnd/: mcdm.rs  mod.rs  wizards.rs
core/src/monte_carlo/: combat.rs  dice.rs  mod.rs
