[workspace]
members = [
    "core",
    "cli"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0.11"
rand = "0.8"
phf = {version = "0.11.3", features = ["macros"]}